# RCP3_CE

./: README.md  animation.py  buttons.py  choice_logic.py  choose_history.json  choose_manager.py  choose_today.json  config.ini  config_editor.py  config_loader.py  draw_history.json  draw_history.json.backupoldversion  drop_rate_manager.py  drop_rates_auto.json  exitwindow.py  floatingbutton.py  function_file_list.txt  init.py  main.py  name.txt  pack_up.py  pipe_receiver.py  pipe_sender.py  plus_launcher_1.0.py  plus_main.pyw  pyproject.toml  requirements.txt  rootmainloop.py  sleep.py  updatelog.txt
