[project]
name = "rcp3-ce"
version = "0.1.0"
description = "随机点名Plus3_社区版"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame",
    "chardet",
    # "pyqt5==5.15.11",
    # 最新的 PyQT5 不支持 Windows uv 构建但是支持 pip 安装
    "pywin32; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ty",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"
